fix events occurring too much + triggers placement

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -15,3 +15,18 @@ body {
   top: 0;
   display: none;
 }
+
+.trigger-choice {
+  position: absolute;
+  visibility: hidden;
+  width: 300px;
+  height: 200px;
+  border: 2px solid #f6b93b;
+  border-radius: 5px;
+  background: #2f3542;
+  padding: 10px 15px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+}
